2007-06-18  Paul J Stevens <paul@nfg.nl>

	* db.c:
	check for resent-message-id during duplicate check
	* db.c, db.h, sort.c:
	avoid duplicate message-ids in a mailbox
	* dbmail-imapsession.h:
	add missing prototype declaration
	* ChangeLog, dbmail-imapsession.c, imap4.c:
	test and finish IDLE using thunderbird and outlook

2007-06-16  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmailtypes.h, debian/rules, imap4.c, 
	imap4.h, imapcommands.c, imapcommands.h, server.c, serverchild.c:
	add IDLE capability
	* ChangeLog, debian/control, debian/rules:
	update build rules for trunk development

2007-06-15  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c, dbmail-imapsession.c, dbmail-message.c, 
	misc.c, misc.h:
	iconv cleanup

2007-06-11  Paul Stevens <paul@nfg.nl>

	* acinclude.m4, debian/patches/00-dbmail_conf.dpatch, 
	man/dbmail-export.8, man/dbmail-imapd.8, man/dbmail-lmtpd.8, 
	man/dbmail-pop3d.8, man/dbmail-sievecmd.8, man/dbmail-smtp.1, 
	man/dbmail-timsieved.8, man/dbmail-users.8, man/dbmail-util.8, 
	man/dbmail.1, man/dbmail.conf.5, top.c:
	make the trunk build again
	* debian/control, debian/rules:
	update build rules for trunk development

2007-06-09  Aaron Stone  <aaron@serendipity.cx>

	* [just about everything]:
	Resync with DBMail 2.2.5

2007-06-02  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	bump version

2007-06-01  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/create_tables.mysql:
	add default encoding to mysql tables to match the default config file

2007-05-30  Paul Stevens <paul@nfg.nl>

	* ChangeLog, db.c:
	avoid segfault while getting uidnext for empty mailbox
	* debug.c:
	add hostname, process name and id to error log
	* test-scripts/cleanlog.sh:
	add new file

2007-05-30  Paul J Stevens <paul@nfg.nl>

	* db.c:
	avoid segfault while getting uidnext for empty mailbox
	* debug.c:
	add hostname, process name and id to error log
	* test-scripts/cleanlog.sh:
	add new file

2007-05-27  Paul J Stevens <paul@nfg.nl>
