@@ -306,6 +306,12 @@ AUTO_REPLY            = no
 #
 #AUTO_NOTIFY_SENDER        =   
 
+# 
+# If you set this to 'yes' dbmail will check for duplicate
+# messages in the relevant mailbox during delivery using 
+# the Message-ID header
+#
+suppress_duplicates	= no
 
 
 # end of configuration file
